--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "ip": "^1.1.8",
-    "solc": "^0.8.20"
+    "solc": "0.8.19"
   }
 }
